added work in hw2 and 3

--- a/hw1/hw1.html
+++ b/hw1/hw1.html
@@ -11,14 +11,14 @@
     <link rel="stylesheet" type="text/css" href="./layout700+.css"/>
     <link rel="stylesheet" type="text/css" href="./layout699-.css"/>
 
-    <title>Seedor87 hw1-hw2</title>
+    <title>Seedor87 Web Page</title>
 
   </head>
 
   <body>
 
     <div id="top">
-      <h1>Robert Seedorf's Advanced Web Programing Homeworks 1 and 2</h1>
+      <h1>Seedor87's Advanced Web Programing Homework</h1>
 
       <hr>
 	<!-- Much thanks to Mr. Dave Taylor for the help with this handy search bar source: https://www.askdavetaylor.com/how_can_i_add_a_google_search_box_to_my_web_site/ -->
@@ -60,9 +60,14 @@
 		
 	      </li>
 
-	      <li>
-		<a href=http://elvis.rowan.edu/~seedor87/awp/hw2/hw2/html>Third</a>
-	      </li>
+	      <li>Scrapers
+		<ul>
+		  <li><a href=http://elvis.rowan.edu/~seedor87/awp/Scrapers/Scrape1.cgi>Catch Up Scraper</a>
+		  </li>
+
+		  <li><a href=http://elvis.rowan.edu/~seedor87/awp/Scrapers/Scrape2.cgi>Five Cartoon Scrpaer</a>
+		  </li>
+		</ul>
 
 	      <li>
 		To Be <b>Continued...</b>
